<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="arraw_back_desc">arraw back</string>
    <string name="share_desc">share</string>
    <string name="support_desc">support</string>
    <string name="arraw_forward_desc">arraw forward</string>
    <string name="share_title">Курс «Android-разработчик»</string>
    <string name="share_link">https://practicum.yandex.com/android-developer</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="support_email">seetochka95@gmail.com</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="search_hint">Поиск</string>
    <string name="clear">Очистить</string>
</resources>