<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <ImageView
            android:id="@+id/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:contentDescription="@string/arraw_back_desc"
            android:src="@drawable/ic_back_arrow_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/settings"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/common_text_size"
            android:fontFamily="@font/ys_display_medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="61dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView style="@style/SettingsTextStyle"
                android:text="@string/dark_theme" />

            <Switch style="@style/SettingsIconStyle" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp">

            <TextView style="@style/SettingsTextStyle"
                android:text="@string/share" />

            <ImageView style="@style/SettingsIconStyle"
                android:contentDescription="@string/share_desc"
                android:src="@drawable/ic_share_24" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp">

            <TextView style="@style/SettingsTextStyle"
                android:text="@string/support" />

            <ImageView style="@style/SettingsIconStyle"
                android:contentDescription="@string/support_desc"
                android:src="@drawable/ic_support_24" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp">

            <TextView style="@style/SettingsTextStyle"
                android:text="@string/agreement" />

            <ImageView style="@style/SettingsIconStyle"
                android:contentDescription="@string/arraw_forward_desc"
                android:src="@drawable/ic_forward_arraw_24" />
        </FrameLayout>

    </LinearLayout>
</LinearLayout>