<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activitySearch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <ImageView
            android:id="@+id/backToMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:contentDescription="@string/arraw_back_desc"
            android:src="@drawable/ic_back_arrow_24" />

        <TextView style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/search" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="14dp"
        android:background="@drawable/serch_bg" >

        <EditText
            android:id="@+id/searchInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/ic_search_18"
            android:drawablePadding="10dp"
            android:background="@null"
            android:inputType="text"
            android:hint="@string/search_hint"
            android:textColorHint="?attr/colorSearchContent"
            android:lines="1"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/common_text_size"
            android:fontFamily="@font/ys_display_regular" />

        <ImageView
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/clear"
            android:src="@drawable/ic_clear_16"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>